connected database to board component

--- a/src/app/components/board/board.component.html
+++ b/src/app/components/board/board.component.html
@@ -5,102 +5,140 @@
         class="col-sm border-radius-lg bg-light mr-1"
         cdkDropList
         #todoList="cdkDropList"
-        [cdkDropListData]="todo"
+        [cdkDropListData]="tasks.todo"
         (cdkDropListDropped)="drop($event)"
       >
         <h6 class="card-title text-uppercase text-truncate pl-2 pt-3">
           <div class="status-red"></div>
           To Do
         </h6>
-        <div class="card mb-3" *ngFor="let item of todo" cdkDrag>
-          <div class="card-body p-3 mb-0">
-            <h5 class="mb-0">{{ item }}</h5>
-            <p class="text-muted small">Module Description</p>
-            <div class="author align-items-center">
-              <img
-                src="../../../assets/img/sign-up.png"
-                alt="..."
-                class="avatar rounded-circle"
-              />
-              <div class="name ps-3">
-                <span>Course Name</span>
-                <div class="stats">
-                  <small
-                    ><i class="fas fa-user-shield mr-1"></i>
-                    <span> Author Name</span></small
-                  >
+        <div *ngFor="let task of tasks.todo" cdkDrag>
+          <a
+            data-bs-toggle="tooltip"
+            data-bs-placement="top"
+            data-container="body"
+            data-animation="true"
+            title="{{ task.moduleDescription }}"
+          >
+            <div class="card mb-3">
+              <div class="card-body p-3 mb-0">
+                <h6 class="mb-0">{{ task.moduleTitle }}</h6>
+                <p class="text-muted small mb-0">
+                  {{ task.moduleDescription | slice: 0:50 }}...
+                </p>
+                <div class="author align-items-center">
+                  <img
+                    src="../../../assets/img/sign-up.png"
+                    alt="..."
+                    class="avatar rounded-circle"
+                  />
+                  <div class="name ps-3">
+                    <span>Course Name</span>
+                    <div class="stats">
+                      <small
+                        ><i class="fas fa-user-shield mr-1"></i>
+                        <span> Author Name</span></small
+                      >
+                    </div>
+                  </div>
                 </div>
               </div>
             </div>
-          </div>
+          </a>
         </div>
       </div>
       <div
         class="col-sm border-radius-lg bg-light ml-1 mr-1"
         cdkDropList
         #todoList="cdkDropList"
-        [cdkDropListData]="doing"
+        [cdkDropListData]="tasks.doing"
         (cdkDropListDropped)="drop($event)"
       >
         <h6 class="card-title text-uppercase text-truncate pl-2 pt-3">
           <div class="status-blue"></div>
           Doing
         </h6>
-        <div class="card mb-3" *ngFor="let item of doing" cdkDrag>
-          <div class="card-body p-3 mb-0">
-            <h5 class="mb-0">{{ item }}</h5>
-            <p class="text-muted small">Module Description</p>
-            <div class="author align-items-center">
-              <img
-                src="../../../assets/img/sign-up.png"
-                alt="..."
-                class="avatar rounded-circle"
-              />
-              <div class="name ps-3">
-                <span>Course Name</span>
-                <div class="stats">
-                  <small
-                    ><i class="fas fa-user-shield mr-1"></i>
-                    <span> Author Name</span></small
-                  >
+        <div *ngFor="let task of tasks.doing" cdkDrag>
+          <a
+            data-bs-toggle="tooltip"
+            data-bs-placement="top"
+            data-container="body"
+            data-animation="true"
+            title="{{ task.moduleDescription }}"
+          >
+            <div class="card mb-3">
+              <div class="card-body p-3 mb-0">
+                <h6 class="mb-0">{{ task.moduleTitle }}</h6>
+                <p class="text-muted small mb-0">
+                  {{ task.moduleDescription | slice: 0:50 }}...
+                </p>
+                <div class="author align-items-center">
+                  <img
+                    src="../../../assets/img/sign-up.png"
+                    alt="..."
+                    class="avatar rounded-circle"
+                  />
+                  <div class="name ps-3">
+                    <span>Course Name</span>
+                    <div class="stats">
+                      <small
+                        ><i class="fas fa-user-shield mr-1"></i>
+                        <span> Author Name</span></small
+                      >
+                    </div>
+                  </div>
                 </div>
               </div>
             </div>
-          </div>
+          </a>
         </div>
       </div>
       <div
         class="col-sm border-radius-lg bg-light ml-1"
         cdkDropList
         #todoList="cdkDropList"
-        [cdkDropListData]="done"
+        [cdkDropListData]="tasks.done"
         (cdkDropListDropped)="drop($event)"
       >
         <h6 class="card-title text-uppercase text-truncate pl-2 pt-3">
           <div class="status-green"></div>
           Done
         </h6>
-        <div class="card mb-3" *ngFor="let item of done" cdkDrag>
-          <div class="card-body p-3 mb-0">
-            <h5 class="mb-0">{{ item }}</h5>
-            <p class="text-muted small">Module Description</p>
-            <div class="author align-items-center">
-              <img
-                src="../../../assets/img/sign-up.png"
-                alt="..."
-                class="avatar rounded-circle"
-              />
-              <div class="name ps-3">
-                <span>Course Name</span>
-                <div class="stats">
-                  <small
-                    ><i class="fas fa-user-shield mr-1"></i>
-                    <span> Author Name</span></small
-                  >
+        <div *ngFor="let task of tasks.done" cdkDrag>
+          <a
+            data-bs-toggle="tooltip"
+            data-bs-placement="top"
+            data-container="body"
+            data-animation="true"
+            title="{{ task.moduleDescription }}"
+          >
+            <div class="card mb-3">
+              <div class="card-body p-3 mb-0">
+                <h6 class="mb-0 text-muted">
+                  <del>{{ task.moduleTitle }}</del>
+                </h6>
+                <p class="text-muted small mb-0">
+                  {{ task.moduleDescription | slice: 0:50 }}...
+                </p>
+                <div class="author align-items-center">
+                  <img
+                    src="../../../assets/img/sign-up.png"
+                    alt="..."
+                    class="avatar rounded-circle"
+                  />
+                  <div class="name ps-3">
+                    <span>Course Name</span>
+                    <div class="stats">
+                      <small
+                        ><i class="fas fa-user-shield mr-1"></i>
+                        <span> Author Name</span></small
+                      >
+                    </div>
+                  </div>
                 </div>
               </div>
             </div>
-          </div>
+          </a>
         </div>
       </div>
     </div>
