--- a/src/app/components/board/board.component.scss
+++ b/src/app/components/board/board.component.scss
@@ -1,7 +1,9 @@
 @import "../../../assets/css/soft-design-system.min";
 @import "../../../assets/css/nucleo-icons.css";
 
-
+a{
+  cursor: pointer;
+}
 
   .status-green {
     width: 30px;
