--- a/src/app/components/card/card.component.html
+++ b/src/app/components/card/card.component.html
@@ -87,6 +87,7 @@
               <button
                 type="button"
                 class="btn bg-gradient-info btn-sm w-100 mt-3"
+                (click)="addCourse()"
               >
                 Add to your board
               </button>
