--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -10,7 +10,7 @@
 
     <ul class="list-unstyled components">
       <li>
-        <a [routerLink]="['']"> 🏠 Home </a>
+        <a [routerLink]="['/']"> 🏠 Home </a>
       </li>
       <li>
         <a routerLinkActive="active" [routerLink]="['/requestcourse']">
