added course details onto board view

--- a/src/app/components/board/board.component.html
+++ b/src/app/components/board/board.component.html
@@ -35,11 +35,11 @@
                     class="avatar rounded-circle"
                   />
                   <div class="name ps-3">
-                    <span>Course Name</span>
+                    <span>{{ task.courseName }}</span>
                     <div class="stats">
                       <small
                         ><i class="fas fa-user-shield mr-1"></i>
-                        <span> Author Name</span></small
+                        <span> {{ task.authorName }}</span></small
                       >
                     </div>
                   </div>
@@ -83,11 +83,11 @@
                     class="avatar rounded-circle"
                   />
                   <div class="name ps-3">
-                    <span>Course Name</span>
+                    <span>{{ task.courseName }}</span>
                     <div class="stats">
                       <small
                         ><i class="fas fa-user-shield mr-1"></i>
-                        <span> Author Name</span></small
+                        <span> {{ task.authorName }}</span></small
                       >
                     </div>
                   </div>
@@ -133,11 +133,11 @@
                     class="avatar rounded-circle"
                   />
                   <div class="name ps-3">
-                    <span>Course Name</span>
+                    <span>{{ task.courseName }}</span>
                     <div class="stats">
                       <small
                         ><i class="fas fa-user-shield mr-1"></i>
-                        <span> Author Name</span></small
+                        <span>{{ task.authorName }}</span></small
                       >
                     </div>
                   </div>
